// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Backend HTTP error responses HTTP 400 (Bad Request) error is rendered correctly 1`] = `
<DocumentFragment>
  <div
    class="jumbotron"
  >
    <div
      class="container text-center"
    >
      <p>
        Displaying search results...
      </p>
      <p>
        Note: Alternate titles might have matched your search terms
      </p>
    </div>
  </div>
  <div
    class="i-am-centered"
  >
    The backend API returned an HTTP error response: 400 (Bad Request)
  </div>
  <div
    class="container"
  >
    <div
      class="row row-cols-md-12"
    >
      <div
        class="col-md-8"
      >
        <div
          class="list-group"
        >
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <div>
              <p
                class="resource-type"
              >
                article
              </p>
              <h2
                class="title"
              >
                Informed consent and the geriatric dental patient
              </h2>
              <p>
                Odom, John G 
                <span>
                  •
                </span>
                 1992
              </p>
              <p
                style="margin: 0px 0px 10px;"
              >
                <span
                  style="box-sizing: border-box;"
                >
                  Published in Journal
                </span>
                <span
                  style="font-style: italic;"
                >
                  Special Care in Dentistry.
                </span>
                Volume 12.Issue 5.Page 202-206.
              </p>
              <dl
                class="citation-info"
              >
                <dt>
                  ISSN:
                </dt>
                <dd>
                  0275-1879
                </dd>
              </dl>
            </div>
          </div>
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <p>
              No results found
            </p>
          </div>
        </div>
      </div>
      <div
        class="col-md-4"
      >
        <div
          class="ask-librarian"
        >
          <h5>
            Need help?
          </h5>
          <h6>
            <a
              href="https://library.nyu.edu/ask/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Ask a Librarian
            </a>
          </h6>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Backend HTTP error responses HTTP 403 (Forbidden) error is rendered correctly 1`] = `
<DocumentFragment>
  <div
    class="jumbotron"
  >
    <div
      class="container text-center"
    >
      <p>
        Displaying search results...
      </p>
      <p>
        Note: Alternate titles might have matched your search terms
      </p>
    </div>
  </div>
  <div
    class="i-am-centered"
  >
    The backend API returned an HTTP error response: 403 (Forbidden)
  </div>
  <div
    class="container"
  >
    <div
      class="row row-cols-md-12"
    >
      <div
        class="col-md-8"
      >
        <div
          class="list-group"
        >
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <div>
              <p
                class="resource-type"
              >
                article
              </p>
              <h2
                class="title"
              >
                Informed consent and the geriatric dental patient
              </h2>
              <p>
                Odom, John G 
                <span>
                  •
                </span>
                 1992
              </p>
              <p
                style="margin: 0px 0px 10px;"
              >
                <span
                  style="box-sizing: border-box;"
                >
                  Published in Journal
                </span>
                <span
                  style="font-style: italic;"
                >
                  Special Care in Dentistry.
                </span>
                Volume 12.Issue 5.Page 202-206.
              </p>
              <dl
                class="citation-info"
              >
                <dt>
                  ISSN:
                </dt>
                <dd>
                  0275-1879
                </dd>
              </dl>
            </div>
          </div>
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <p>
              No results found
            </p>
          </div>
        </div>
      </div>
      <div
        class="col-md-4"
      >
        <div
          class="ask-librarian"
        >
          <h5>
            Need help?
          </h5>
          <h6>
            <a
              href="https://library.nyu.edu/ask/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Ask a Librarian
            </a>
          </h6>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Backend HTTP error responses HTTP 408 (Request Timeout) error is rendered correctly 1`] = `
<DocumentFragment>
  <div
    class="jumbotron"
  >
    <div
      class="container text-center"
    >
      <p>
        Displaying search results...
      </p>
      <p>
        Note: Alternate titles might have matched your search terms
      </p>
    </div>
  </div>
  <div
    class="i-am-centered"
  >
    The backend API returned an HTTP error response: 408 (Request Timeout)
  </div>
  <div
    class="container"
  >
    <div
      class="row row-cols-md-12"
    >
      <div
        class="col-md-8"
      >
        <div
          class="list-group"
        >
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <div>
              <p
                class="resource-type"
              >
                article
              </p>
              <h2
                class="title"
              >
                Informed consent and the geriatric dental patient
              </h2>
              <p>
                Odom, John G 
                <span>
                  •
                </span>
                 1992
              </p>
              <p
                style="margin: 0px 0px 10px;"
              >
                <span
                  style="box-sizing: border-box;"
                >
                  Published in Journal
                </span>
                <span
                  style="font-style: italic;"
                >
                  Special Care in Dentistry.
                </span>
                Volume 12.Issue 5.Page 202-206.
              </p>
              <dl
                class="citation-info"
              >
                <dt>
                  ISSN:
                </dt>
                <dd>
                  0275-1879
                </dd>
              </dl>
            </div>
          </div>
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <p>
              No results found
            </p>
          </div>
        </div>
      </div>
      <div
        class="col-md-4"
      >
        <div
          class="ask-librarian"
        >
          <h5>
            Need help?
          </h5>
          <h6>
            <a
              href="https://library.nyu.edu/ask/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Ask a Librarian
            </a>
          </h6>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Backend HTTP error responses HTTP 500 (Internal Server Error) error is rendered correctly 1`] = `
<DocumentFragment>
  <div
    class="jumbotron"
  >
    <div
      class="container text-center"
    >
      <p>
        Displaying search results...
      </p>
      <p>
        Note: Alternate titles might have matched your search terms
      </p>
    </div>
  </div>
  <div
    class="i-am-centered"
  >
    The backend API returned an HTTP error response: 500 (Internal Server Error)
  </div>
  <div
    class="container"
  >
    <div
      class="row row-cols-md-12"
    >
      <div
        class="col-md-8"
      >
        <div
          class="list-group"
        >
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <div>
              <p
                class="resource-type"
              >
                article
              </p>
              <h2
                class="title"
              >
                Informed consent and the geriatric dental patient
              </h2>
              <p>
                Odom, John G 
                <span>
                  •
                </span>
                 1992
              </p>
              <p
                style="margin: 0px 0px 10px;"
              >
                <span
                  style="box-sizing: border-box;"
                >
                  Published in Journal
                </span>
                <span
                  style="font-style: italic;"
                >
                  Special Care in Dentistry.
                </span>
                Volume 12.Issue 5.Page 202-206.
              </p>
              <dl
                class="citation-info"
              >
                <dt>
                  ISSN:
                </dt>
                <dd>
                  0275-1879
                </dd>
              </dl>
            </div>
          </div>
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <p>
              No results found
            </p>
          </div>
        </div>
      </div>
      <div
        class="col-md-4"
      >
        <div
          class="ask-librarian"
        >
          <h5>
            Need help?
          </h5>
          <h6>
            <a
              href="https://library.nyu.edu/ask/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Ask a Librarian
            </a>
          </h6>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Backend fetch exceptions TypeError: Failed to fetch renders backend fetch errors correctly 1`] = `
<DocumentFragment>
  <div
    class="jumbotron"
  >
    <div
      class="container text-center"
    >
      <p>
        Displaying search results...
      </p>
      <p>
        Note: Alternate titles might have matched your search terms
      </p>
    </div>
  </div>
  <div
    class="i-am-centered"
  >
    Error fetching data from the Ariadne API: TypeError: Failed to fetch
  </div>
  <div
    class="container"
  >
    <div
      class="row row-cols-md-12"
    >
      <div
        class="col-md-8"
      >
        <div
          class="list-group"
        >
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <div>
              <p
                class="resource-type"
              >
                article
              </p>
              <h2
                class="title"
              >
                Informed consent and the geriatric dental patient
              </h2>
              <p>
                Odom, John G 
                <span>
                  •
                </span>
                 1992
              </p>
              <p
                style="margin: 0px 0px 10px;"
              >
                <span
                  style="box-sizing: border-box;"
                >
                  Published in Journal
                </span>
                <span
                  style="font-style: italic;"
                >
                  Special Care in Dentistry.
                </span>
                Volume 12.Issue 5.Page 202-206.
              </p>
              <dl
                class="citation-info"
              >
                <dt>
                  ISSN:
                </dt>
                <dd>
                  0275-1879
                </dd>
              </dl>
            </div>
          </div>
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <p>
              No results found
            </p>
          </div>
        </div>
      </div>
      <div
        class="col-md-4"
      >
        <div
          class="ask-librarian"
        >
          <h5>
            Need help?
          </h5>
          <h6>
            <a
              href="https://library.nyu.edu/ask/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Ask a Librarian
            </a>
          </h6>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Backend response includes errors Response includes 2 errors and an empty SFX response renders errors included in backend response correctly 1`] = `
<DocumentFragment>
  <div
    class="jumbotron"
  >
    <div
      class="container text-center"
    >
      <p>
        Displaying search results...
      </p>
      <p>
        Note: Alternate titles might have matched your search terms
      </p>
    </div>
  </div>
  <div
    class="i-am-centered"
  >
    The backend API returned errors: "[ERROR 1]", "[ERROR 2]"
  </div>
  <div
    class="container"
  >
    <div
      class="row row-cols-md-12"
    >
      <div
        class="col-md-8"
      >
        <div
          class="list-group"
        >
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <div>
              <p
                class="resource-type"
              >
                article
              </p>
              <h2
                class="title"
              >
                Informed consent and the geriatric dental patient
              </h2>
              <p>
                Odom, John G 
                <span>
                  •
                </span>
                 1992
              </p>
              <p
                style="margin: 0px 0px 10px;"
              >
                <span
                  style="box-sizing: border-box;"
                >
                  Published in Journal
                </span>
                <span
                  style="font-style: italic;"
                >
                  Special Care in Dentistry.
                </span>
                Volume 12.Issue 5.Page 202-206.
              </p>
              <dl
                class="citation-info"
              >
                <dt>
                  ISSN:
                </dt>
                <dd>
                  0275-1879
                </dd>
              </dl>
            </div>
          </div>
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <p>
              No results found
            </p>
          </div>
        </div>
      </div>
      <div
        class="col-md-4"
      >
        <div
          class="ask-librarian"
        >
          <h5>
            Need help?
          </h5>
          <h6>
            <a
              href="https://library.nyu.edu/ask/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Ask a Librarian
            </a>
          </h6>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Backend success "Life" Magazine and the Power of Photography renders correctly 1`] = `
<DocumentFragment>
  <div
    class="jumbotron"
  >
    <div
      class="container text-center"
    >
      <p>
        Displaying search results...
      </p>
      <p>
        Note: Alternate titles might have matched your search terms
      </p>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="row row-cols-md-12"
    >
      <div
        class="col-md-8"
      >
        <div
          class="list-group"
        >
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <div>
              <p
                class="resource-type"
              >
                article
              </p>
              <h2
                class="title"
              >
                Informed consent and the geriatric dental patient
              </h2>
              <p>
                Odom, John G 
                <span>
                  •
                </span>
                 1992
              </p>
              <p
                style="margin: 0px 0px 10px;"
              >
                <span
                  style="box-sizing: border-box;"
                >
                  Published in Journal
                </span>
                <span
                  style="font-style: italic;"
                >
                  Special Care in Dentistry.
                </span>
                Volume 12.Issue 5.Page 202-206.
              </p>
              <dl
                class="citation-info"
              >
                <dt>
                  ISSN:
                </dt>
                <dd>
                  0275-1879
                </dd>
              </dl>
            </div>
          </div>
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <div
              class="row"
            >
              <h6>
                <a
                  href="http://proxy.library.nyu.edu/login?url=https://openurl.ebsco.com/linksvc/linking.aspx?issue=4&sid=Primo&atitle=%22life%22+magazine+and+the+power+of+photography&spage=144&date=20211201&issn=0004-3079&title=The+Art+Bulletin&genre=article&volume=103"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  EBSCOhost Academic Search Complete
                </a>
              </h6>
              <small>
                Available from 1975/03/01
              </small>
            </div>
          </div>
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <div
              class="row"
            >
              <h6>
                <a
                  href="http://proxy.library.nyu.edu/login?url=https://openurl.ebsco.com/linksvc/linking.aspx?issn=0004-3079&title=The+Art+Bulletin&genre=article&volume=103&issue=4&sid=Primo&atitle=%22life%22+magazine+and+the+power+of+photography&spage=144&date=20211201"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  EBSCOhost Humanities Full Text
                </a>
              </h6>
              <small>
                Available from 1987/12/01
              </small>
            </div>
          </div>
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <div
              class="row"
            >
              <h6>
                <a
                  href="http://proxy.library.nyu.edu/login?url=https://openurl.ebsco.com/linksvc/linking.aspx?atitle=%22life%22+magazine+and+the+power+of+photography&sid=Primo&issue=4&date=20211201&spage=144&genre=article&title=The+Art+Bulletin&issn=0004-3079&volume=103"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  EBSCOhost OmniFile Full Text Mega
                </a>
              </h6>
              <small>
                Available from 1995/03/01
              </small>
            </div>
          </div>
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <div
              class="row"
            >
              <h6>
                <a
                  href="http://proxy.library.nyu.edu/login?url=https://www.tandfonline.com/openurl?genre=article&issn=0004-3079&issue=4&volume=103&date=2021&spage=144"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Taylor & Francis Complete Library Database Model
                </a>
              </h6>
              <small>
                Available from 1913/09/01 volume: 1 issue: 1
              </small>
            </div>
          </div>
        </div>
      </div>
      <div
        class="col-md-4"
      >
        <div
          class="ask-librarian"
        >
          <h5>
            Need help?
          </h5>
          <h6>
            <a
              href="https://library.nyu.edu/ask/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Ask a Librarian
            </a>
          </h6>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Backend success Corriere Fiorentino renders correctly 1`] = `
<DocumentFragment>
  <div
    class="jumbotron"
  >
    <div
      class="container text-center"
    >
      <p>
        Displaying search results...
      </p>
      <p>
        Note: Alternate titles might have matched your search terms
      </p>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="row row-cols-md-12"
    >
      <div
        class="col-md-8"
      >
        <div
          class="list-group"
        >
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <div>
              <p
                class="resource-type"
              >
                article
              </p>
              <h2
                class="title"
              >
                Informed consent and the geriatric dental patient
              </h2>
              <p>
                Odom, John G 
                <span>
                  •
                </span>
                 1992
              </p>
              <p
                style="margin: 0px 0px 10px;"
              >
                <span
                  style="box-sizing: border-box;"
                >
                  Published in Journal
                </span>
                <span
                  style="font-style: italic;"
                >
                  Special Care in Dentistry.
                </span>
                Volume 12.Issue 5.Page 202-206.
              </p>
              <dl
                class="citation-info"
              >
                <dt>
                  ISSN:
                </dt>
                <dd>
                  0275-1879
                </dd>
              </dl>
            </div>
          </div>
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <div
              class="row"
            >
              <h6>
                <a
                  href="
                    http://proxy.library.nyu.edu/login?url=https://www.pressreader.com/italy/corriere-fiorentino
                "
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  PressReader
                </a>
              </h6>
              <small />
            </div>
          </div>
        </div>
      </div>
      <div
        class="col-md-4"
      >
        <div
          class="ask-librarian"
        >
          <h5>
            Need help?
          </h5>
          <h6>
            <a
              href="https://library.nyu.edu/ask/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Ask a Librarian
            </a>
          </h6>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Backend success Design of LED light therapy device based on free-form lens. renders correctly 1`] = `
<DocumentFragment>
  <div
    class="jumbotron"
  >
    <div
      class="container text-center"
    >
      <p>
        Displaying search results...
      </p>
      <p>
        Note: Alternate titles might have matched your search terms
      </p>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="row row-cols-md-12"
    >
      <div
        class="col-md-8"
      >
        <div
          class="list-group"
        >
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <div>
              <p
                class="resource-type"
              >
                article
              </p>
              <h2
                class="title"
              >
                Informed consent and the geriatric dental patient
              </h2>
              <p>
                Odom, John G 
                <span>
                  •
                </span>
                 1992
              </p>
              <p
                style="margin: 0px 0px 10px;"
              >
                <span
                  style="box-sizing: border-box;"
                >
                  Published in Journal
                </span>
                <span
                  style="font-style: italic;"
                >
                  Special Care in Dentistry.
                </span>
                Volume 12.Issue 5.Page 202-206.
              </p>
              <dl
                class="citation-info"
              >
                <dt>
                  ISSN:
                </dt>
                <dd>
                  0275-1879
                </dd>
              </dl>
            </div>
          </div>
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <div
              class="row"
            >
              <h6>
                <a
                  href="http://proxy.library.nyu.edu/login?url=https://www.spiedigitallibrary.org/conference-proceedings-of-spie"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  SPIE Digital Library (Proceedings Series)
                </a>
              </h6>
              <small>
                Available from 1963/01/01
              </small>
            </div>
          </div>
        </div>
      </div>
      <div
        class="col-md-4"
      >
        <div
          class="ask-librarian"
        >
          <h5>
            Need help?
          </h5>
          <h6>
            <a
              href="https://library.nyu.edu/ask/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Ask a Librarian
            </a>
          </h6>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Backend success Modelling Modular Living: Furniture and Life Magazine and Interior Design in 1980s China renders correctly 1`] = `
<DocumentFragment>
  <div
    class="jumbotron"
  >
    <div
      class="container text-center"
    >
      <p>
        Displaying search results...
      </p>
      <p>
        Note: Alternate titles might have matched your search terms
      </p>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="row row-cols-md-12"
    >
      <div
        class="col-md-8"
      >
        <div
          class="list-group"
        >
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <div>
              <p
                class="resource-type"
              >
                article
              </p>
              <h2
                class="title"
              >
                Informed consent and the geriatric dental patient
              </h2>
              <p>
                Odom, John G 
                <span>
                  •
                </span>
                 1992
              </p>
              <p
                style="margin: 0px 0px 10px;"
              >
                <span
                  style="box-sizing: border-box;"
                >
                  Published in Journal
                </span>
                <span
                  style="font-style: italic;"
                >
                  Special Care in Dentistry.
                </span>
                Volume 12.Issue 5.Page 202-206.
              </p>
              <dl
                class="citation-info"
              >
                <dt>
                  ISSN:
                </dt>
                <dd>
                  0275-1879
                </dd>
              </dl>
            </div>
          </div>
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <div
              class="row"
            >
              <h6>
                <a
                  href="http://proxy.library.nyu.edu/login?url=https://academic.oup.com/jdh/article/35/2/151/article"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Oxford University Press Journals Current
                </a>
              </h6>
              <small>
                Available from 1988/01/01
              </small>
            </div>
          </div>
        </div>
      </div>
      <div
        class="col-md-4"
      >
        <div
          class="ask-librarian"
        >
          <h5>
            Need help?
          </h5>
          <h6>
            <a
              href="https://library.nyu.edu/ask/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Ask a Librarian
            </a>
          </h6>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Backend success Moral psychology is relationship regulation: moral motives for unity, hierarchy, equality, and proportionality. renders correctly 1`] = `
<DocumentFragment>
  <div
    class="jumbotron"
  >
    <div
      class="container text-center"
    >
      <p>
        Displaying search results...
      </p>
      <p>
        Note: Alternate titles might have matched your search terms
      </p>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="row row-cols-md-12"
    >
      <div
        class="col-md-8"
      >
        <div
          class="list-group"
        >
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <div>
              <p
                class="resource-type"
              >
                article
              </p>
              <h2
                class="title"
              >
                Informed consent and the geriatric dental patient
              </h2>
              <p>
                Odom, John G 
                <span>
                  •
                </span>
                 1992
              </p>
              <p
                style="margin: 0px 0px 10px;"
              >
                <span
                  style="box-sizing: border-box;"
                >
                  Published in Journal
                </span>
                <span
                  style="font-style: italic;"
                >
                  Special Care in Dentistry.
                </span>
                Volume 12.Issue 5.Page 202-206.
              </p>
              <dl
                class="citation-info"
              >
                <dt>
                  ISSN:
                </dt>
                <dd>
                  0275-1879
                </dd>
              </dl>
            </div>
          </div>
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <div
              class="row"
            >
              <h6>
                <a
                  href="http://proxy.library.nyu.edu/login?url=http://psycnet.apa.org/journals/rev/118/1/57"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  PsycARTICLES
                </a>
              </h6>
              <small>
                Available from 1894 volume: 1 issue: 1
              </small>
            </div>
          </div>
        </div>
      </div>
      <div
        class="col-md-4"
      >
        <div
          class="ask-librarian"
        >
          <h5>
            Need help?
          </h5>
          <h6>
            <a
              href="https://library.nyu.edu/ask/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Ask a Librarian
            </a>
          </h6>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Backend success Our Lady of everyday life : la Virgen de Guadalupe and the Catholic imagination of Mexican American women in America renders correctly 1`] = `
<DocumentFragment>
  <div
    class="jumbotron"
  >
    <div
      class="container text-center"
    >
      <p>
        Displaying search results...
      </p>
      <p>
        Note: Alternate titles might have matched your search terms
      </p>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="row row-cols-md-12"
    >
      <div
        class="col-md-8"
      >
        <div
          class="list-group"
        >
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <div>
              <p
                class="resource-type"
              >
                article
              </p>
              <h2
                class="title"
              >
                Informed consent and the geriatric dental patient
              </h2>
              <p>
                Odom, John G 
                <span>
                  •
                </span>
                 1992
              </p>
              <p
                style="margin: 0px 0px 10px;"
              >
                <span
                  style="box-sizing: border-box;"
                >
                  Published in Journal
                </span>
                <span
                  style="font-style: italic;"
                >
                  Special Care in Dentistry.
                </span>
                Volume 12.Issue 5.Page 202-206.
              </p>
              <dl
                class="citation-info"
              >
                <dt>
                  ISSN:
                </dt>
                <dd>
                  0275-1879
                </dd>
              </dl>
            </div>
          </div>
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <div
              class="row"
            >
              <h6>
                <a
                  href="http://proxy.library.nyu.edu/login?url=https://ill.library.nyu.edu/illiad/illiad.dll/OpenURL?sid=DEFAULT%20(Via%20SFX)&genre=bookitem&date=2018&year=2018&title=Our%20Lady%20of%20Everyday%20Life&month=1&isbn=0-19-028039-5&aufirst=Mar%C3%ADa%20Del%20Socorro&aulast=Casta%C3%B1eda-Liles"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Bobst Library  Interlibrary Loan
                </a>
              </h6>
              <small />
            </div>
          </div>
        </div>
      </div>
      <div
        class="col-md-4"
      >
        <div
          class="ask-librarian"
        >
          <h5>
            Need help?
          </h5>
          <h6>
            <a
              href="https://library.nyu.edu/ask/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Ask a Librarian
            </a>
          </h6>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Backend success Publish the Picture at Your Peril: Visual Ideas and the Commercial Apparatus of Life Magazine. [unescaped ampersand in \`title\` query param value] renders correctly 1`] = `
<DocumentFragment>
  <div
    class="jumbotron"
  >
    <div
      class="container text-center"
    >
      <p>
        Displaying search results...
      </p>
      <p>
        Note: Alternate titles might have matched your search terms
      </p>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="row row-cols-md-12"
    >
      <div
        class="col-md-8"
      >
        <div
          class="list-group"
        >
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <div>
              <p
                class="resource-type"
              >
                article
              </p>
              <h2
                class="title"
              >
                Informed consent and the geriatric dental patient
              </h2>
              <p>
                Odom, John G 
                <span>
                  •
                </span>
                 1992
              </p>
              <p
                style="margin: 0px 0px 10px;"
              >
                <span
                  style="box-sizing: border-box;"
                >
                  Published in Journal
                </span>
                <span
                  style="font-style: italic;"
                >
                  Special Care in Dentistry.
                </span>
                Volume 12.Issue 5.Page 202-206.
              </p>
              <dl
                class="citation-info"
              >
                <dt>
                  ISSN:
                </dt>
                <dd>
                  0275-1879
                </dd>
              </dl>
            </div>
          </div>
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <div
              class="row"
            >
              <h6>
                <a
                  href="http://proxy.library.nyu.edu/login?url=https://www.cambridge.org/core/product/113A938A653BAE7C42654C34EC40B874"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Cambridge University Press Journals Complete
                </a>
              </h6>
              <small>
                Available from 2002/01 volume: 1 issue: 1
              </small>
            </div>
          </div>
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <div
              class="row"
            >
              <h6>
                <a
                  href="http://proxy.library.nyu.edu/login?url=https://openurl.ebsco.com/linksvc/linking.aspx?title=JOURNAL+OF+THE+GILDED+AGE+AND+PROGRESSIVE+ERA&genre=article&volume=20&issue=2&sid=Primo&date=20210401&atitle=publish+the+picture+at+your+peril&issn=1537-7814&spage=301"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  EBSCOhost America History and Life with Full Text
                </a>
              </h6>
              <small>
                Available from 2008/07/01
              </small>
            </div>
          </div>
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <div
              class="row"
            >
              <h6>
                <a
                  href="http://proxy.library.nyu.edu/login?url=https://gateway.proquest.com/openurl?spage=301&issn=1537-7814&res_dat=xri%3Apqm&url_ver=Z39.88-2004&date=2021-04-01&jtitle=JOURNAL%2BOF%2BTHE%2BGILDED%2BAGE%2BAND%2BPROGRESSIVE%2BERA&issue=2&genre=article&volume=20&rft_val_fmt=info%3Aofi%2Ffmt%3Akev%3Amtx%3Aarticle"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  ProQuest Central
                </a>
              </h6>
              <small>
                Available from 2011/01/01
              </small>
            </div>
          </div>
        </div>
      </div>
      <div
        class="col-md-4"
      >
        <div
          class="ask-librarian"
        >
          <h5>
            Need help?
          </h5>
          <h6>
            <a
              href="https://library.nyu.edu/ask/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Ask a Librarian
            </a>
          </h6>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Backend success Publish the Picture at Your Peril: Visual Ideas and the Commercial Apparatus of Life Magazine. renders correctly 1`] = `
<DocumentFragment>
  <div
    class="jumbotron"
  >
    <div
      class="container text-center"
    >
      <p>
        Displaying search results...
      </p>
      <p>
        Note: Alternate titles might have matched your search terms
      </p>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="row row-cols-md-12"
    >
      <div
        class="col-md-8"
      >
        <div
          class="list-group"
        >
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <div>
              <p
                class="resource-type"
              >
                article
              </p>
              <h2
                class="title"
              >
                Informed consent and the geriatric dental patient
              </h2>
              <p>
                Odom, John G 
                <span>
                  •
                </span>
                 1992
              </p>
              <p
                style="margin: 0px 0px 10px;"
              >
                <span
                  style="box-sizing: border-box;"
                >
                  Published in Journal
                </span>
                <span
                  style="font-style: italic;"
                >
                  Special Care in Dentistry.
                </span>
                Volume 12.Issue 5.Page 202-206.
              </p>
              <dl
                class="citation-info"
              >
                <dt>
                  ISSN:
                </dt>
                <dd>
                  0275-1879
                </dd>
              </dl>
            </div>
          </div>
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <div
              class="row"
            >
              <h6>
                <a
                  href="http://proxy.library.nyu.edu/login?url=https://www.cambridge.org/core/product/113A938A653BAE7C42654C34EC40B874"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Cambridge University Press Journals Complete
                </a>
              </h6>
              <small>
                Available from 2002/01 volume: 1 issue: 1
              </small>
            </div>
          </div>
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <div
              class="row"
            >
              <h6>
                <a
                  href="http://proxy.library.nyu.edu/login?url=https://openurl.ebsco.com/linksvc/linking.aspx?date=20210401&atitle=publish+the+picture+at+your+peril&issn=1537-7814&spage=301&title=JOURNAL+OF+THE+GILDED+AGE+AND+PROGRESSIVE+ERA&volume=20&genre=article&sid=Primo&issue=2"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  EBSCOhost America History and Life with Full Text
                </a>
              </h6>
              <small>
                Available from 2008/07/01
              </small>
            </div>
          </div>
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <div
              class="row"
            >
              <h6>
                <a
                  href="http://proxy.library.nyu.edu/login?url=https://gateway.proquest.com/openurl?url_ver=Z39.88-2004&date=2021-04-01&spage=301&issn=1537-7814&res_dat=xri%3Apqm&volume=20&genre=article&rft_val_fmt=info%3Aofi%2Ffmt%3Akev%3Amtx%3Aarticle&issue=2&jtitle=JOURNAL%2BOF%2BTHE%2BGILDED%2BAGE%2BAND%2BPROGRESSIVE%2BERA"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  ProQuest Central
                </a>
              </h6>
              <small>
                Available from 2011/01/01
              </small>
            </div>
          </div>
        </div>
      </div>
      <div
        class="col-md-4"
      >
        <div
          class="ask-librarian"
        >
          <h5>
            Need help?
          </h5>
          <h6>
            <a
              href="https://library.nyu.edu/ask/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Ask a Librarian
            </a>
          </h6>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Backend success The New Yorker renders correctly 1`] = `
<DocumentFragment>
  <div
    class="jumbotron"
  >
    <div
      class="container text-center"
    >
      <p>
        Displaying search results...
      </p>
      <p>
        Note: Alternate titles might have matched your search terms
      </p>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="row row-cols-md-12"
    >
      <div
        class="col-md-8"
      >
        <div
          class="list-group"
        >
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <div>
              <p
                class="resource-type"
              >
                article
              </p>
              <h2
                class="title"
              >
                Informed consent and the geriatric dental patient
              </h2>
              <p>
                Odom, John G 
                <span>
                  •
                </span>
                 1992
              </p>
              <p
                style="margin: 0px 0px 10px;"
              >
                <span
                  style="box-sizing: border-box;"
                >
                  Published in Journal
                </span>
                <span
                  style="font-style: italic;"
                >
                  Special Care in Dentistry.
                </span>
                Volume 12.Issue 5.Page 202-206.
              </p>
              <dl
                class="citation-info"
              >
                <dt>
                  ISSN:
                </dt>
                <dd>
                  0275-1879
                </dd>
              </dl>
            </div>
          </div>
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <div
              class="row"
            >
              <h6>
                <a
                  href="http://proxy.library.nyu.edu/login?url=http://gateway.proquest.com/openurl?rft_id=41130&rft_val_fmt=info%3Aofi%2Ffmt%3Akev%3Amtx%3Ajournal&url_ver=Z39.88-2004&res_dat=xri%3Apqm&rfr_id=info%3Axri%2Fsid%3Aprimo&genre=journal"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Art, Design & Architecture Collection
                </a>
              </h6>
              <small>
                Available from 2002/11/04
              </small>
            </div>
          </div>
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <div
              class="row"
            >
              <h6>
                <a
                  href="http://proxy.library.nyu.edu/login?url=http://archives.newyorker.com/#folio=C1"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  E Journal Full Text
                </a>
              </h6>
              <small>
                Available from 1925
              </small>
            </div>
          </div>
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <div
              class="row"
            >
              <h6>
                <a
                  href="http://proxy.library.nyu.edu/login?url=https://global.factiva.com/en/du/headlines.asp?XSID=S001dbr5DEs5DEmN9MpMD6mNDVyMHmnRsIuMcNG1pRRQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQQAA&CurrentSourcesDesc=sc_u_gtny%2CNew+Yorker&CurrentSources=U%7Cgtny"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Factiva
                </a>
              </h6>
              <small>
                Available from 1997
              </small>
            </div>
          </div>
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <div
              class="row"
            >
              <h6>
                <a
                  href="http://proxy.library.nyu.edu/login?url=http://find.galegroup.com/openurl/openurl?url_ver=Z39.88-2004&url_ctx_fmt=info%3Aofi%2Ffmt%3Akev%3Amtx%3Actx&rft.issn=0028-792X&res_id=info%3Asid%2Fgale%3ASHAX&req_dat=info%3Asid%2Fgale%3Augnid%3Anew64731&rft_val_fmt=info%3Aofi%2Ffmt%3Akev%3Amtx%3Ajournal&ctx_enc=info%3Aofi%3Aenc%3AUTF-8&rft.date=2002&rft.jtitle=New+Yorker"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Gale Cengage Shakespeare Collection Periodicals
                </a>
              </h6>
              <small>
                Available from 2002
              </small>
            </div>
          </div>
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <div
              class="row"
            >
              <h6>
                <a
                  href="http://proxy.library.nyu.edu/login?url=https://link.gale.com/apps/pub/1161/ITOF?u=nysl_me_newyorku"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Gale General OneFile
                </a>
              </h6>
              <small>
                Available from 2002/01/14
              </small>
            </div>
          </div>
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <div
              class="row"
            >
              <h6>
                <a
                  href="http://proxy.library.nyu.edu/login?url=https://link.gale.com/apps/pub/1161/LitRC?u=new64731"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Gale Literature Resource Center
                </a>
              </h6>
              <small>
                Available from 1978/01/01  until 1978/12/31. Available from 1982/01/01  until 1982/12/31. Available from 1989/01/01  until 1989/12/31. Available from 1996/01/01  until 1996/12/31. Available from 2002/01/01
              </small>
            </div>
          </div>
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <div
              class="row"
            >
              <h6>
                <a
                  href="http://proxy.library.nyu.edu/login?url=https://advance.lexis.com/api/search/advanced?source=MTA2OTUwNg&identityprofileid=W4HVBF32601"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Lexis Advance US
                </a>
              </h6>
              <small>
                Available from 1999
              </small>
            </div>
          </div>
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <div
              class="row"
            >
              <h6>
                <a
                  href="http://proxy.library.nyu.edu/login?url=http://archives.newyorker.com/#folio=C1"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Miscellaneous Ejournals
                </a>
              </h6>
              <small>
                Available from 1925
              </small>
            </div>
          </div>
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <div
              class="row"
            >
              <h6>
                <a
                  href="http://proxy.library.nyu.edu/login?url=https://gateway.proquest.com/openurl?rft_id=41130&rft_val_fmt=info%3Aofi%2Ffmt%3Akev%3Amtx%3Ajournal&url_ver=Z39.88-2004&res_dat=xri%3Apqm&rfr_id=info%3Axri%2Fsid%3Aprimo&genre=journal"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Music & Performing Arts Collection
                </a>
              </h6>
              <small>
                Available from 2002/11/04
              </small>
            </div>
          </div>
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <div
              class="row"
            >
              <h6>
                <a
                  href="http://proxy.library.nyu.edu/login?url=https://gateway.proquest.com/openurl?rft_id=16493&rft_val_fmt=info%3Aofi%2Ffmt%3Akev%3Amtx%3Ajournal&url_ver=Z39.88-2004&rfr_id=info%3Axri%2Fsid%3Aprimo&res_dat=xri%3Apqm&genre=journal"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Music & Performing Arts Collection
                </a>
              </h6>
              <small>
                Available from 2001/08/20  until 2017/01/02
              </small>
            </div>
          </div>
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <div
              class="row"
            >
              <h6>
                <a
                  href="http://proxy.library.nyu.edu/login?url=http://www.newyorker.com/archive"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  OpinionArchives
                </a>
              </h6>
              <small>
                Available from 1925
              </small>
            </div>
          </div>
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <div
              class="row"
            >
              <h6>
                <a
                  href="http://proxy.library.nyu.edu/login?url=https://gateway.proquest.com/openurl?rft_id=41130&rft_val_fmt=info%3Aofi%2Ffmt%3Akev%3Amtx%3Ajournal&res_dat=xri%3Apqm&rfr_id=info%3Axri%2Fsid%3Aprimo&url_ver=Z39.88-2004&genre=journal"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  ProQuest Central
                </a>
              </h6>
              <small>
                Available from 2002/11/04
              </small>
            </div>
          </div>
        </div>
      </div>
      <div
        class="col-md-4"
      >
        <div
          class="ask-librarian"
        >
          <h5>
            Need help?
          </h5>
          <h6>
            <a
              href="https://library.nyu.edu/ask/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Ask a Librarian
            </a>
          </h6>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Backend success The Year's work in modern language studies. renders correctly 1`] = `
<DocumentFragment>
  <div
    class="jumbotron"
  >
    <div
      class="container text-center"
    >
      <p>
        Displaying search results...
      </p>
      <p>
        Note: Alternate titles might have matched your search terms
      </p>
    </div>
  </div>
  <div
    class="container"
  >
    <div
      class="row row-cols-md-12"
    >
      <div
        class="col-md-8"
      >
        <div
          class="list-group"
        >
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <div>
              <p
                class="resource-type"
              >
                article
              </p>
              <h2
                class="title"
              >
                Informed consent and the geriatric dental patient
              </h2>
              <p>
                Odom, John G 
                <span>
                  •
                </span>
                 1992
              </p>
              <p
                style="margin: 0px 0px 10px;"
              >
                <span
                  style="box-sizing: border-box;"
                >
                  Published in Journal
                </span>
                <span
                  style="font-style: italic;"
                >
                  Special Care in Dentistry.
                </span>
                Volume 12.Issue 5.Page 202-206.
              </p>
              <dl
                class="citation-info"
              >
                <dt>
                  ISSN:
                </dt>
                <dd>
                  0275-1879
                </dd>
              </dl>
            </div>
          </div>
          <div
            class="list-group-item list-group-item-action flex-column border-0"
          >
            <div
              class="row"
            >
              <h6>
                <a
                  href="http://proxy.library.nyu.edu/login?url=https://ill.library.nyu.edu/illiad/illiad.dll/OpenURL?title=The%20Year's%20Work%20in%20Modern%20Language%20Studies&issn=0084-4152&genre=article&sid=DEFAULT%20(Via%20SFX)"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  Bobst Library  Interlibrary Loan
                </a>
              </h6>
              <small />
            </div>
          </div>
        </div>
      </div>
      <div
        class="col-md-4"
      >
        <div
          class="ask-librarian"
        >
          <h5>
            Need help?
          </h5>
          <h6>
            <a
              href="https://library.nyu.edu/ask/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Ask a Librarian
            </a>
          </h6>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
